# TravelAgent

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/adapter/: python_agent.go
backend/internal/cache/: preference_cache.go  redis.go  short_memory.go
backend/internal/config/: config.go
backend/internal/httpapi/: router.go
backend/internal/httpapi/handler/: admin.go  chat.go  health.go  preferences.go  sessions.go  trips.go
backend/internal/httpapi/middleware/: admin.go  logger.go  request_id.go
backend/internal/httpapi/respond/: response.go
backend/internal/model/: dto.go  entities.go
backend/internal/repository/: agent_run_repo.go  message_repo.go  mysql.go  preference_repo.go  session_repo.go  statistics_repo.go  trip_repo.go  user_repo.go
backend/internal/service/: chat.go  errors.go  health.go  helpers.go  migration.go  preference.go  session.go  trip.go
backend/migrations/: 001_init.sql
doc/: PLAN.md  deploy-reference.md  persistence.md
docs/: README.md  project-structure.md
scripts/: README.md  backend_build.ps1  install_python_deps.ps1  migrate_memory_json.ps1  start_backend.ps1  start_cli.ps1
tests/: README.md
travel_agent/: __init__.py  __main__.py  cli.py
travel_agent/agents/: __init__.py
travel_agent/config/: __init__.py  agentscope_config.py  app.py
travel_agent/memory/: __init__.py
travel_agent/utils/: __init__.py
