[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-agent"
version = "0.1.0"
description = "Aligo multi-agent travel assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
aligo-cli = "travel_agent.cli:main"

[tool.setuptools]
py-modules = ["cli", "config", "config_agentscope"]
packages = [
    "agents",
    "context",
    "utils",
    "travel_agent",
    "travel_agent.config",
    "travel_agent.agents",
    "travel_agent.memory",
    "travel_agent.utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
